compiler/final/modules/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> programInitiator PROGRAM_KW ID ; declist block ;
Rule 2     program -> programInitiator PROGRAM_KW ID ; block ;
Rule 3     programInitiator -> empty
Rule 4     declist -> dec
Rule 5     declist -> declist dec
Rule 6     dec -> vardec
Rule 7     dec -> procdec
Rule 8     dec -> funcdec
Rule 9     type -> INT_KW
Rule 10    type -> REAL_KW
Rule 11    type -> BOOL_KW
Rule 12    iddec -> ID
Rule 13    iddec -> ID ASSIGNMENT exp
Rule 14    idlist -> iddec
Rule 15    idlist -> idlist , iddec
Rule 16    vardec -> type idlist ;
Rule 17    procdec -> PROCEDURE_KW ID ( paramdecs_final ) block ;
Rule 18    procdec -> PROCEDURE_KW ID ( paramdecs_final ) declist block ;
Rule 19    funcdec -> funInitiator scopeInitiator block ;
Rule 20    funcdec -> funInitiator scopeInitiator declist block ;
Rule 21    funInitiator -> FUNCTION_KW ID ( quadder nexter paramdecs_final ) : type
Rule 22    paramdecs_final -> paramdecs
Rule 23    paramdecs -> paramdec
Rule 24    paramdecs -> paramdecs ; paramdec
Rule 25    paramdec -> type paramlist
Rule 26    paramlist -> ID
Rule 27    paramlist -> paramlist , ID
Rule 28    block -> BEGIN_KW scopeInitiator stmtlist END_KW
Rule 29    scopeInitiator -> empty
Rule 30    block -> stmt
Rule 31    stmtlist -> stmt
Rule 32    stmtlist -> stmtlist ; stmt
Rule 33    lvalue -> ID
Rule 34    assignment_stmt -> lvalue ASSIGNMENT exp
Rule 35    stmt -> assignment_stmt
Rule 36    stmt -> selectionIfInitiator quadder block nexter quadder
Rule 37    stmt -> selectionIfInitiator quadder block nexter ELSE_KW quadder block quadder
Rule 38    selectionIfInitiator -> IF_KW exp THEN_KW
Rule 39    stmt -> iterationInitiator quadder block nexter
Rule 40    iterationInitiator -> WHILE_KW quadder exp DO_KW
Rule 41    stmt -> for_init_up quadder block nexter
Rule 42    for_init_up -> forInitiator TO_KW quadder exp DO_KW
Rule 43    stmt -> for_init_down quadder block nexter
Rule 44    for_init_down -> forInitiator DOWNTO_KW quadder exp DO_KW
Rule 45    forInitiator -> FOR_KW assignment_stmt
Rule 46    stmt -> CASE_KW exp nexter caseelement END_KW quadder
Rule 47    caseelement -> NUMBER_INT : quadder block ; nexter
Rule 48    caseelement -> caseelement NUMBER_INT : quadder block ; nexter
Rule 49    stmt -> RETURN_KW exp
Rule 50    stmt -> exp
Rule 51    andInitiator -> exp AND_THEN_KW
Rule 52    exp -> andInitiator quadder exp
Rule 53    orInitiator -> exp OR_ELSE_KW
Rule 54    exp -> orInitiator quadder exp
Rule 55    exp -> exp + quadder exp
Rule 56    exp -> exp - quadder exp
Rule 57    exp -> exp * quadder exp
Rule 58    exp -> exp / quadder exp
Rule 59    exp -> ( exp )
Rule 60    exp -> NUMBER_INT
Rule 61    exp -> NUMBER_REAL
Rule 62    exp -> TRUE_KW
Rule 63    exp -> FALSE_KW
Rule 64    exp -> lvalue
Rule 65    exp -> ID ( explist )
Rule 66    exp -> exp GT quadder exp
Rule 67    exp -> exp GE quadder exp
Rule 68    exp -> exp NE quadder exp
Rule 69    exp -> exp EQ quadder exp
Rule 70    exp -> exp LT quadder exp
Rule 71    exp -> exp LE quadder exp
Rule 72    explist -> exp
Rule 73    explist -> explist , exp
Rule 74    quadder -> empty
Rule 75    nexter -> empty
Rule 76    empty -> <empty>

Terminals, with rules where they appear

(                    : 17 18 21 59 65
)                    : 17 18 21 59 65
*                    : 57
+                    : 55
,                    : 15 27 73
-                    : 56
/                    : 58
:                    : 21 47 48
;                    : 1 1 2 2 16 17 18 19 20 24 32 47 48
AND_THEN_KW          : 51
ASSIGNMENT           : 13 34
BEGIN_KW             : 28
BOOL_KW              : 11
CASE_KW              : 46
DOWNTO_KW            : 44
DO_KW                : 40 42 44
ELSE_KW              : 37
END_KW               : 28 46
EQ                   : 69
FALSE_KW             : 63
FOR_KW               : 45
FUNCTION_KW          : 21
GE                   : 67
GT                   : 66
ID                   : 1 2 12 13 17 18 21 26 27 33 65
IF_KW                : 38
INT_KW               : 9
LE                   : 71
LT                   : 70
NE                   : 68
NUMBER_INT           : 47 48 60
NUMBER_REAL          : 61
OR_ELSE_KW           : 53
PROCEDURE_KW         : 17 18
PROGRAM_KW           : 1 2
REAL_KW              : 10
RETURN_KW            : 49
THEN_KW              : 38
TO_KW                : 42
TRUE_KW              : 62
WHILE_KW             : 40
error                : 

Nonterminals, with rules where they appear

andInitiator         : 52
assignment_stmt      : 35 45
block                : 1 2 17 18 19 20 36 37 37 39 41 43 47 48
caseelement          : 46 48
dec                  : 4 5
declist              : 1 5 18 20
empty                : 3 29 74 75
exp                  : 13 34 38 40 42 44 46 49 50 51 52 53 54 55 55 56 56 57 57 58 58 59 66 66 67 67 68 68 69 69 70 70 71 71 72 73
explist              : 65 73
forInitiator         : 42 44
for_init_down        : 43
for_init_up          : 41
funInitiator         : 19 20
funcdec              : 8
iddec                : 14 15
idlist               : 15 16
iterationInitiator   : 39
lvalue               : 34 64
nexter               : 21 36 37 39 41 43 46 47 48
orInitiator          : 54
paramdec             : 23 24
paramdecs            : 22 24
paramdecs_final      : 17 18 21
paramlist            : 25 27
procdec              : 7
program              : 0
programInitiator     : 1 2
quadder              : 21 36 36 37 37 37 39 40 41 42 43 44 46 47 48 52 54 55 56 57 58 66 67 68 69 70 71
scopeInitiator       : 19 20 28
selectionIfInitiator : 36 37
stmt                 : 30 31 32
stmtlist             : 28 32
type                 : 16 21 25
vardec               : 6

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . programInitiator PROGRAM_KW ID ; declist block ;
    (2) program -> . programInitiator PROGRAM_KW ID ; block ;
    (3) programInitiator -> . empty
    (76) empty -> .

    PROGRAM_KW      reduce using rule 76 (empty -> .)

    program                        shift and go to state 1
    programInitiator               shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> programInitiator . PROGRAM_KW ID ; declist block ;
    (2) program -> programInitiator . PROGRAM_KW ID ; block ;

    PROGRAM_KW      shift and go to state 4


state 3

    (3) programInitiator -> empty .

    PROGRAM_KW      reduce using rule 3 (programInitiator -> empty .)


state 4

    (1) program -> programInitiator PROGRAM_KW . ID ; declist block ;
    (2) program -> programInitiator PROGRAM_KW . ID ; block ;

    ID              shift and go to state 5


state 5

    (1) program -> programInitiator PROGRAM_KW ID . ; declist block ;
    (2) program -> programInitiator PROGRAM_KW ID . ; block ;

    ;               shift and go to state 6


state 6

    (1) program -> programInitiator PROGRAM_KW ID ; . declist block ;
    (2) program -> programInitiator PROGRAM_KW ID ; . block ;
    (4) declist -> . dec
    (5) declist -> . declist dec
    (28) block -> . BEGIN_KW scopeInitiator stmtlist END_KW
    (30) block -> . stmt
    (6) dec -> . vardec
    (7) dec -> . procdec
    (8) dec -> . funcdec
    (35) stmt -> . assignment_stmt
    (36) stmt -> . selectionIfInitiator quadder block nexter quadder
    (37) stmt -> . selectionIfInitiator quadder block nexter ELSE_KW quadder block quadder
    (39) stmt -> . iterationInitiator quadder block nexter
    (41) stmt -> . for_init_up quadder block nexter
    (43) stmt -> . for_init_down quadder block nexter
    (46) stmt -> . CASE_KW exp nexter caseelement END_KW quadder
    (49) stmt -> . RETURN_KW exp
    (50) stmt -> . exp
    (16) vardec -> . type idlist ;
    (17) procdec -> . PROCEDURE_KW ID ( paramdecs_final ) block ;
    (18) procdec -> . PROCEDURE_KW ID ( paramdecs_final ) declist block ;
    (19) funcdec -> . funInitiator scopeInitiator block ;
    (20) funcdec -> . funInitiator scopeInitiator declist block ;
    (34) assignment_stmt -> . lvalue ASSIGNMENT exp
    (38) selectionIfInitiator -> . IF_KW exp THEN_KW
    (40) iterationInitiator -> . WHILE_KW quadder exp DO_KW
    (42) for_init_up -> . forInitiator TO_KW quadder exp DO_KW
    (44) for_init_down -> . forInitiator DOWNTO_KW quadder exp DO_KW
    (52) exp -> . andInitiator quadder exp
    (54) exp -> . orInitiator quadder exp
    (55) exp -> . exp + quadder exp
    (56) exp -> . exp - quadder exp
    (57) exp -> . exp * quadder exp
    (58) exp -> . exp / quadder exp
    (59) exp -> . ( exp )
    (60) exp -> . NUMBER_INT
    (61) exp -> . NUMBER_REAL
    (62) exp -> . TRUE_KW
    (63) exp -> . FALSE_KW
    (64) exp -> . lvalue
    (65) exp -> . ID ( explist )
    (66) exp -> . exp GT quadder exp
    (67) exp -> . exp GE quadder exp
    (68) exp -> . exp NE quadder exp
    (69) exp -> . exp EQ quadder exp
    (70) exp -> . exp LT quadder exp
    (71) exp -> . exp LE quadder exp
    (9) type -> . INT_KW
    (10) type -> . REAL_KW
    (11) type -> . BOOL_KW
    (21) funInitiator -> . FUNCTION_KW ID ( quadder nexter paramdecs_final ) : type
    (33) lvalue -> . ID
    (45) forInitiator -> . FOR_KW assignment_stmt
    (51) andInitiator -> . exp AND_THEN_KW
    (53) orInitiator -> . exp OR_ELSE_KW

    BEGIN_KW        shift and go to state 11
    CASE_KW         shift and go to state 21
    RETURN_KW       shift and go to state 23
    PROCEDURE_KW    shift and go to state 25
    IF_KW           shift and go to state 29
    WHILE_KW        shift and go to state 30
    (               shift and go to state 26
    NUMBER_INT      shift and go to state 34
    NUMBER_REAL     shift and go to state 35
    TRUE_KW         shift and go to state 36
    FALSE_KW        shift and go to state 37
    ID              shift and go to state 7
    INT_KW          shift and go to state 38
    REAL_KW         shift and go to state 39
    BOOL_KW         shift and go to state 40
    FUNCTION_KW     shift and go to state 41
    FOR_KW          shift and go to state 42

    declist                        shift and go to state 8
    block                          shift and go to state 9
    dec                            shift and go to state 10
    stmt                           shift and go to state 12
    vardec                         shift and go to state 13
    procdec                        shift and go to state 14
    funcdec                        shift and go to state 15
    assignment_stmt                shift and go to state 16
    selectionIfInitiator           shift and go to state 17
    iterationInitiator             shift and go to state 18
    for_init_up                    shift and go to state 19
    for_init_down                  shift and go to state 20
    exp                            shift and go to state 22
    type                           shift and go to state 24
    funInitiator                   shift and go to state 27
    lvalue                         shift and go to state 28
    forInitiator                   shift and go to state 31
    andInitiator                   shift and go to state 32
    orInitiator                    shift and go to state 33

state 7

    (65) exp -> ID . ( explist )
    (33) lvalue -> ID .

    (               shift and go to state 43
    ASSIGNMENT      reduce using rule 33 (lvalue -> ID .)
    +               reduce using rule 33 (lvalue -> ID .)
    -               reduce using rule 33 (lvalue -> ID .)
    *               reduce using rule 33 (lvalue -> ID .)
    /               reduce using rule 33 (lvalue -> ID .)
    GT              reduce using rule 33 (lvalue -> ID .)
    GE              reduce using rule 33 (lvalue -> ID .)
    NE              reduce using rule 33 (lvalue -> ID .)
    EQ              reduce using rule 33 (lvalue -> ID .)
    LT              reduce using rule 33 (lvalue -> ID .)
    LE              reduce using rule 33 (lvalue -> ID .)
    AND_THEN_KW     reduce using rule 33 (lvalue -> ID .)
    OR_ELSE_KW      reduce using rule 33 (lvalue -> ID .)
    ;               reduce using rule 33 (lvalue -> ID .)
    NUMBER_INT      reduce using rule 33 (lvalue -> ID .)
    END_KW          reduce using rule 33 (lvalue -> ID .)
    ELSE_KW         reduce using rule 33 (lvalue -> ID .)
    )               reduce using rule 33 (lvalue -> ID .)
    THEN_KW         reduce using rule 33 (lvalue -> ID .)
    ,               reduce using rule 33 (lvalue -> ID .)
    TO_KW           reduce using rule 33 (lvalue -> ID .)
    DOWNTO_KW       reduce using rule 33 (lvalue -> ID .)
    DO_KW           reduce using rule 33 (lvalue -> ID .)


state 8

    (1) program -> programInitiator PROGRAM_KW ID ; declist . block ;
    (5) declist -> declist . dec
    (28) block -> . BEGIN_KW scopeInitiator stmtlist END_KW
    (30) block -> . stmt
    (6) dec -> . vardec
    (7) dec -> . procdec
    (8) dec -> . funcdec
    (35) stmt -> . assignment_stmt
    (36) stmt -> . selectionIfInitiator quadder block nexter quadder
    (37) stmt -> . selectionIfInitiator quadder block nexter ELSE_KW quadder block quadder
    (39) stmt -> . iterationInitiator quadder block nexter
    (41) stmt -> . for_init_up quadder block nexter
    (43) stmt -> . for_init_down quadder block nexter
    (46) stmt -> . CASE_KW exp nexter caseelement END_KW quadder
    (49) stmt -> . RETURN_KW exp
    (50) stmt -> . exp
    (16) vardec -> . type idlist ;
    (17) procdec -> . PROCEDURE_KW ID ( paramdecs_final ) block ;
    (18) procdec -> . PROCEDURE_KW ID ( paramdecs_final ) declist block ;
    (19) funcdec -> . funInitiator scopeInitiator block ;
    (20) funcdec -> . funInitiator scopeInitiator declist block ;
    (34) assignment_stmt -> . lvalue ASSIGNMENT exp
    (38) selectionIfInitiator -> . IF_KW exp THEN_KW
    (40) iterationInitiator -> . WHILE_KW quadder exp DO_KW
    (42) for_init_up -> . forInitiator TO_KW quadder exp DO_KW
    (44) for_init_down -> . forInitiator DOWNTO_KW quadder exp DO_KW
    (52) exp -> . andInitiator quadder exp
    (54) exp -> . orInitiator quadder exp
    (55) exp -> . exp + quadder exp
    (56) exp -> . exp - quadder exp
    (57) exp -> . exp * quadder exp
    (58) exp -> . exp / quadder exp
    (59) exp -> . ( exp )
    (60) exp -> . NUMBER_INT
    (61) exp -> . NUMBER_REAL
    (62) exp -> . TRUE_KW
    (63) exp -> . FALSE_KW
    (64) exp -> . lvalue
    (65) exp -> . ID ( explist )
    (66) exp -> . exp GT quadder exp
    (67) exp -> . exp GE quadder exp
    (68) exp -> . exp NE quadder exp
    (69) exp -> . exp EQ quadder exp
    (70) exp -> . exp LT quadder exp
    (71) exp -> . exp LE quadder exp
    (9) type -> . INT_KW
    (10) type -> . REAL_KW
    (11) type -> . BOOL_KW
    (21) funInitiator -> . FUNCTION_KW ID ( quadder nexter paramdecs_final ) : type
    (33) lvalue -> . ID
    (45) forInitiator -> . FOR_KW assignment_stmt
    (51) andInitiator -> . exp AND_THEN_KW
    (53) orInitiator -> . exp OR_ELSE_KW

    BEGIN_KW        shift and go to state 11
    CASE_KW         shift and go to state 21
    RETURN_KW       shift and go to state 23
    PROCEDURE_KW    shift and go to state 25
    IF_KW           shift and go to state 29
    WHILE_KW        shift and go to state 30
    (               shift and go to state 26
    NUMBER_INT      shift and go to state 34
    NUMBER_REAL     shift and go to state 35
    TRUE_KW         shift and go to state 36
    FALSE_KW        shift and go to state 37
    ID              shift and go to state 7
    INT_KW          shift and go to state 38
    REAL_KW         shift and go to state 39
    BOOL_KW         shift and go to state 40
    FUNCTION_KW     shift and go to state 41
    FOR_KW          shift and go to state 42

    block                          shift and go to state 44
    dec                            shift and go to state 45
    stmt                           shift and go to state 12
    vardec                         shift and go to state 13
    procdec                        shift and go to state 14
    funcdec                        shift and go to state 15
    assignment_stmt                shift and go to state 16
    selectionIfInitiator           shift and go to state 17
    iterationInitiator             shift and go to state 18
    for_init_up                    shift and go to state 19
    for_init_down                  shift and go to state 20
    exp                            shift and go to state 22
    type                           shift and go to state 24
    funInitiator                   shift and go to state 27
    lvalue                         shift and go to state 28
    forInitiator                   shift and go to state 31
    andInitiator                   shift and go to state 32
    orInitiator                    shift and go to state 33

state 9

    (2) program -> programInitiator PROGRAM_KW ID ; block . ;

    ;               shift and go to state 46


state 10

    (4) declist -> dec .

    BEGIN_KW        reduce using rule 4 (declist -> dec .)
    CASE_KW         reduce using rule 4 (declist -> dec .)
    RETURN_KW       reduce using rule 4 (declist -> dec .)
    PROCEDURE_KW    reduce using rule 4 (declist -> dec .)
    IF_KW           reduce using rule 4 (declist -> dec .)
    WHILE_KW        reduce using rule 4 (declist -> dec .)
    (               reduce using rule 4 (declist -> dec .)
    NUMBER_INT      reduce using rule 4 (declist -> dec .)
    NUMBER_REAL     reduce using rule 4 (declist -> dec .)
    TRUE_KW         reduce using rule 4 (declist -> dec .)
    FALSE_KW        reduce using rule 4 (declist -> dec .)
    ID              reduce using rule 4 (declist -> dec .)
    INT_KW          reduce using rule 4 (declist -> dec .)
    REAL_KW         reduce using rule 4 (declist -> dec .)
    BOOL_KW         reduce using rule 4 (declist -> dec .)
    FUNCTION_KW     reduce using rule 4 (declist -> dec .)
    FOR_KW          reduce using rule 4 (declist -> dec .)


state 11

    (28) block -> BEGIN_KW . scopeInitiator stmtlist END_KW
    (29) scopeInitiator -> . empty
    (76) empty -> .

    CASE_KW         reduce using rule 76 (empty -> .)
    RETURN_KW       reduce using rule 76 (empty -> .)
    IF_KW           reduce using rule 76 (empty -> .)
    WHILE_KW        reduce using rule 76 (empty -> .)
    (               reduce using rule 76 (empty -> .)
    NUMBER_INT      reduce using rule 76 (empty -> .)
    NUMBER_REAL     reduce using rule 76 (empty -> .)
    TRUE_KW         reduce using rule 76 (empty -> .)
    FALSE_KW        reduce using rule 76 (empty -> .)
    ID              reduce using rule 76 (empty -> .)
    FOR_KW          reduce using rule 76 (empty -> .)

    scopeInitiator                 shift and go to state 47
    empty                          shift and go to state 48

state 12

    (30) block -> stmt .

    ;               reduce using rule 30 (block -> stmt .)
    ELSE_KW         reduce using rule 30 (block -> stmt .)
    END_KW          reduce using rule 30 (block -> stmt .)


state 13

    (6) dec -> vardec .

    BEGIN_KW        reduce using rule 6 (dec -> vardec .)
    CASE_KW         reduce using rule 6 (dec -> vardec .)
    RETURN_KW       reduce using rule 6 (dec -> vardec .)
    PROCEDURE_KW    reduce using rule 6 (dec -> vardec .)
    IF_KW           reduce using rule 6 (dec -> vardec .)
    WHILE_KW        reduce using rule 6 (dec -> vardec .)
    (               reduce using rule 6 (dec -> vardec .)
    NUMBER_INT      reduce using rule 6 (dec -> vardec .)
    NUMBER_REAL     reduce using rule 6 (dec -> vardec .)
    TRUE_KW         reduce using rule 6 (dec -> vardec .)
    FALSE_KW        reduce using rule 6 (dec -> vardec .)
    ID              reduce using rule 6 (dec -> vardec .)
    INT_KW          reduce using rule 6 (dec -> vardec .)
    REAL_KW         reduce using rule 6 (dec -> vardec .)
    BOOL_KW         reduce using rule 6 (dec -> vardec .)
    FUNCTION_KW     reduce using rule 6 (dec -> vardec .)
    FOR_KW          reduce using rule 6 (dec -> vardec .)


state 14

    (7) dec -> procdec .

    BEGIN_KW        reduce using rule 7 (dec -> procdec .)
    CASE_KW         reduce using rule 7 (dec -> procdec .)
    RETURN_KW       reduce using rule 7 (dec -> procdec .)
    PROCEDURE_KW    reduce using rule 7 (dec -> procdec .)
    IF_KW           reduce using rule 7 (dec -> procdec .)
    WHILE_KW        reduce using rule 7 (dec -> procdec .)
    (               reduce using rule 7 (dec -> procdec .)
    NUMBER_INT      reduce using rule 7 (dec -> procdec .)
    NUMBER_REAL     reduce using rule 7 (dec -> procdec .)
    TRUE_KW         reduce using rule 7 (dec -> procdec .)
    FALSE_KW        reduce using rule 7 (dec -> procdec .)
    ID              reduce using rule 7 (dec -> procdec .)
    INT_KW          reduce using rule 7 (dec -> procdec .)
    REAL_KW         reduce using rule 7 (dec -> procdec .)
    BOOL_KW         reduce using rule 7 (dec -> procdec .)
    FUNCTION_KW     reduce using rule 7 (dec -> procdec .)
    FOR_KW          reduce using rule 7 (dec -> procdec .)


state 15

    (8) dec -> funcdec .

    BEGIN_KW        reduce using rule 8 (dec -> funcdec .)
    CASE_KW         reduce using rule 8 (dec -> funcdec .)
    RETURN_KW       reduce using rule 8 (dec -> funcdec .)
    PROCEDURE_KW    reduce using rule 8 (dec -> funcdec .)
    IF_KW           reduce using rule 8 (dec -> funcdec .)
    WHILE_KW        reduce using rule 8 (dec -> funcdec .)
    (               reduce using rule 8 (dec -> funcdec .)
    NUMBER_INT      reduce using rule 8 (dec -> funcdec .)
    NUMBER_REAL     reduce using rule 8 (dec -> funcdec .)
    TRUE_KW         reduce using rule 8 (dec -> funcdec .)
    FALSE_KW        reduce using rule 8 (dec -> funcdec .)
    ID              reduce using rule 8 (dec -> funcdec .)
    INT_KW          reduce using rule 8 (dec -> funcdec .)
    REAL_KW         reduce using rule 8 (dec -> funcdec .)
    BOOL_KW         reduce using rule 8 (dec -> funcdec .)
    FUNCTION_KW     reduce using rule 8 (dec -> funcdec .)
    FOR_KW          reduce using rule 8 (dec -> funcdec .)


state 16

    (35) stmt -> assignment_stmt .

    ;               reduce using rule 35 (stmt -> assignment_stmt .)
    END_KW          reduce using rule 35 (stmt -> assignment_stmt .)
    ELSE_KW         reduce using rule 35 (stmt -> assignment_stmt .)


state 17

    (36) stmt -> selectionIfInitiator . quadder block nexter quadder
    (37) stmt -> selectionIfInitiator . quadder block nexter ELSE_KW quadder block quadder
    (74) quadder -> . empty
    (76) empty -> .

    BEGIN_KW        reduce using rule 76 (empty -> .)
    CASE_KW         reduce using rule 76 (empty -> .)
    RETURN_KW       reduce using rule 76 (empty -> .)
    IF_KW           reduce using rule 76 (empty -> .)
    WHILE_KW        reduce using rule 76 (empty -> .)
    (               reduce using rule 76 (empty -> .)
    NUMBER_INT      reduce using rule 76 (empty -> .)
    NUMBER_REAL     reduce using rule 76 (empty -> .)
    TRUE_KW         reduce using rule 76 (empty -> .)
    FALSE_KW        reduce using rule 76 (empty -> .)
    ID              reduce using rule 76 (empty -> .)
    FOR_KW          reduce using rule 76 (empty -> .)

    quadder                        shift and go to state 49
    empty                          shift and go to state 50

state 18

    (39) stmt -> iterationInitiator . quadder block nexter
    (74) quadder -> . empty
    (76) empty -> .

    BEGIN_KW        reduce using rule 76 (empty -> .)
    CASE_KW         reduce using rule 76 (empty -> .)
    RETURN_KW       reduce using rule 76 (empty -> .)
    IF_KW           reduce using rule 76 (empty -> .)
    WHILE_KW        reduce using rule 76 (empty -> .)
    (               reduce using rule 76 (empty -> .)
    NUMBER_INT      reduce using rule 76 (empty -> .)
    NUMBER_REAL     reduce using rule 76 (empty -> .)
    TRUE_KW         reduce using rule 76 (empty -> .)
    FALSE_KW        reduce using rule 76 (empty -> .)
    ID              reduce using rule 76 (empty -> .)
    FOR_KW          reduce using rule 76 (empty -> .)

    quadder                        shift and go to state 51
    empty                          shift and go to state 50

state 19

    (41) stmt -> for_init_up . quadder block nexter
    (74) quadder -> . empty
    (76) empty -> .

    BEGIN_KW        reduce using rule 76 (empty -> .)
    CASE_KW         reduce using rule 76 (empty -> .)
    RETURN_KW       reduce using rule 76 (empty -> .)
    IF_KW           reduce using rule 76 (empty -> .)
    WHILE_KW        reduce using rule 76 (empty -> .)
    (               reduce using rule 76 (empty -> .)
    NUMBER_INT      reduce using rule 76 (empty -> .)
    NUMBER_REAL     reduce using rule 76 (empty -> .)
    TRUE_KW         reduce using rule 76 (empty -> .)
    FALSE_KW        reduce using rule 76 (empty -> .)
    ID              reduce using rule 76 (empty -> .)
    FOR_KW          reduce using rule 76 (empty -> .)

    quadder                        shift and go to state 52
    empty                          shift and go to state 50

state 20

    (43) stmt -> for_init_down . quadder block nexter
    (74) quadder -> . empty
    (76) empty -> .

    BEGIN_KW        reduce using rule 76 (empty -> .)
    CASE_KW         reduce using rule 76 (empty -> .)
    RETURN_KW       reduce using rule 76 (empty -> .)
    IF_KW           reduce using rule 76 (empty -> .)
    WHILE_KW        reduce using rule 76 (empty -> .)
    (               reduce using rule 76 (empty -> .)
    NUMBER_INT      reduce using rule 76 (empty -> .)
    NUMBER_REAL     reduce using rule 76 (empty -> .)
    TRUE_KW         reduce using rule 76 (empty -> .)
    FALSE_KW        reduce using rule 76 (empty -> .)
    ID              reduce using rule 76 (empty -> .)
    FOR_KW          reduce using rule 76 (empty -> .)

    quadder                        shift and go to state 53
    empty                          shift and go to state 50

state 21

    (46) stmt -> CASE_KW . exp nexter caseelement END_KW quadder
    (52) exp -> . andInitiator quadder exp
    (54) exp -> . orInitiator quadder exp
    (55) exp -> . exp + quadder exp
    (56) exp -> . exp - quadder exp
    (57) exp -> . exp * quadder exp
    (58) exp -> . exp / quadder exp
    (59) exp -> . ( exp )
    (60) exp -> . NUMBER_INT
    (61) exp -> . NUMBER_REAL
    (62) exp -> . TRUE_KW
    (63) exp -> . FALSE_KW
    (64) exp -> . lvalue
    (65) exp -> . ID ( explist )
    (66) exp -> . exp GT quadder exp
    (67) exp -> . exp GE quadder exp
    (68) exp -> . exp NE quadder exp
    (69) exp -> . exp EQ quadder exp
    (70) exp -> . exp LT quadder exp
    (71) exp -> . exp LE quadder exp
    (51) andInitiator -> . exp AND_THEN_KW
    (53) orInitiator -> . exp OR_ELSE_KW
    (33) lvalue -> . ID

    (               shift and go to state 26
    NUMBER_INT      shift and go to state 34
    NUMBER_REAL     shift and go to state 35
    TRUE_KW         shift and go to state 36
    FALSE_KW        shift and go to state 37
    ID              shift and go to state 7

    exp                            shift and go to state 54
    andInitiator                   shift and go to state 32
    orInitiator                    shift and go to state 33
    lvalue                         shift and go to state 55

state 22

    (50) stmt -> exp .
    (55) exp -> exp . + quadder exp
    (56) exp -> exp . - quadder exp
    (57) exp -> exp . * quadder exp
    (58) exp -> exp . / quadder exp
    (66) exp -> exp . GT quadder exp
    (67) exp -> exp . GE quadder exp
    (68) exp -> exp . NE quadder exp
    (69) exp -> exp . EQ quadder exp
    (70) exp -> exp . LT quadder exp
    (71) exp -> exp . LE quadder exp
    (51) andInitiator -> exp . AND_THEN_KW
    (53) orInitiator -> exp . OR_ELSE_KW

    ;               reduce using rule 50 (stmt -> exp .)
    END_KW          reduce using rule 50 (stmt -> exp .)
    ELSE_KW         reduce using rule 50 (stmt -> exp .)
    +               shift and go to state 56
    -               shift and go to state 57
    *               shift and go to state 58
    /               shift and go to state 59
    GT              shift and go to state 60
    GE              shift and go to state 61
    NE              shift and go to state 62
    EQ              shift and go to state 63
    LT              shift and go to state 64
    LE              shift and go to state 65
    AND_THEN_KW     shift and go to state 66
    OR_ELSE_KW      shift and go to state 67


state 23

    (49) stmt -> RETURN_KW . exp
    (52) exp -> . andInitiator quadder exp
    (54) exp -> . orInitiator quadder exp
    (55) exp -> . exp + quadder exp
    (56) exp -> . exp - quadder exp
    (57) exp -> . exp * quadder exp
    (58) exp -> . exp / quadder exp
    (59) exp -> . ( exp )
    (60) exp -> . NUMBER_INT
    (61) exp -> . NUMBER_REAL
    (62) exp -> . TRUE_KW
    (63) exp -> . FALSE_KW
    (64) exp -> . lvalue
    (65) exp -> . ID ( explist )
    (66) exp -> . exp GT quadder exp
    (67) exp -> . exp GE quadder exp
    (68) exp -> . exp NE quadder exp
    (69) exp -> . exp EQ quadder exp
    (70) exp -> . exp LT quadder exp
    (71) exp -> . exp LE quadder exp
    (51) andInitiator -> . exp AND_THEN_KW
    (53) orInitiator -> . exp OR_ELSE_KW
    (33) lvalue -> . ID

    (               shift and go to state 26
    NUMBER_INT      shift and go to state 34
    NUMBER_REAL     shift and go to state 35
    TRUE_KW         shift and go to state 36
    FALSE_KW        shift and go to state 37
    ID              shift and go to state 7

    exp                            shift and go to state 68
    andInitiator                   shift and go to state 32
    orInitiator                    shift and go to state 33
    lvalue                         shift and go to state 55

state 24

    (16) vardec -> type . idlist ;
    (14) idlist -> . iddec
    (15) idlist -> . idlist , iddec
    (12) iddec -> . ID
    (13) iddec -> . ID ASSIGNMENT exp

    ID              shift and go to state 71

    idlist                         shift and go to state 69
    iddec                          shift and go to state 70

state 25

    (17) procdec -> PROCEDURE_KW . ID ( paramdecs_final ) block ;
    (18) procdec -> PROCEDURE_KW . ID ( paramdecs_final ) declist block ;

    ID              shift and go to state 72


state 26

    (59) exp -> ( . exp )
    (52) exp -> . andInitiator quadder exp
    (54) exp -> . orInitiator quadder exp
    (55) exp -> . exp + quadder exp
    (56) exp -> . exp - quadder exp
    (57) exp -> . exp * quadder exp
    (58) exp -> . exp / quadder exp
    (59) exp -> . ( exp )
    (60) exp -> . NUMBER_INT
    (61) exp -> . NUMBER_REAL
    (62) exp -> . TRUE_KW
    (63) exp -> . FALSE_KW
    (64) exp -> . lvalue
    (65) exp -> . ID ( explist )
    (66) exp -> . exp GT quadder exp
    (67) exp -> . exp GE quadder exp
    (68) exp -> . exp NE quadder exp
    (69) exp -> . exp EQ quadder exp
    (70) exp -> . exp LT quadder exp
    (71) exp -> . exp LE quadder exp
    (51) andInitiator -> . exp AND_THEN_KW
    (53) orInitiator -> . exp OR_ELSE_KW
    (33) lvalue -> . ID

    (               shift and go to state 26
    NUMBER_INT      shift and go to state 34
    NUMBER_REAL     shift and go to state 35
    TRUE_KW         shift and go to state 36
    FALSE_KW        shift and go to state 37
    ID              shift and go to state 7

    exp                            shift and go to state 73
    andInitiator                   shift and go to state 32
    orInitiator                    shift and go to state 33
    lvalue                         shift and go to state 55

state 27

    (19) funcdec -> funInitiator . scopeInitiator block ;
    (20) funcdec -> funInitiator . scopeInitiator declist block ;
    (29) scopeInitiator -> . empty
    (76) empty -> .
